--- a/less/base.less
+++ b/less/base.less
@@ -4,7 +4,7 @@ html {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
+    font-size: @base_size;
     max-width: @mobile_width;
 
 }
