--- a/less/blocks/feature.less
+++ b/less/blocks/feature.less
@@ -1,20 +1,19 @@
 .features {
-    background-color: #f2f2f2;
-    &__slogan {
+    background-color: @gray;
+
+&__slogan {
         padding: 50px;
         color: @blue;
-
-font-size: 24px;
+        font-size: @very_big_size;
         font-weight: 300;
         text-align: center;
         background: @white;
-
     }
     .feature {
         padding: 25px;
         text-align: center;
         &__title {
-            font-size: 18px;
+            font-size: @big_size;
             font-weight: 700;
         }
         &__desc {
