--- a/less/variables.less
+++ b/less/variables.less
@@ -7,7 +7,15 @@
 @white: #fff;
 @pink: #d22856;
 @yellow:#f8e514;
-@gray:#b5babe;
+
+@gray:#f2f2f2;
 
 /*width*/
+
 @mobile_width:320px;
+
+/*Font*/
+
+@base_size: 14px;
+@big_size: 18px;
+@veri_big_size: 24px;
