--- a/less/blocks/application.less
+++ b/less/blocks/application.less
@@ -3,13 +3,14 @@
     padding: 30px 20px;
     color: @white;
 
-    &__button {
+&__button {
         display: block;
         padding: 15px 40px;
         text-align: center;
-        font-size: 18px;
+        font-size: @big_size;
         border: 3px solid@white;
-        border-radius: 30px;
+
+border-radius: 30px;
     }
     &__platform_selector {
         display: flex;
@@ -17,6 +18,7 @@
         justify-content: space-around;
     }
     &__link {
+        font-size: 0;
         display: inline-block;
         width: 60px;
         height: 60px;
@@ -33,8 +35,7 @@
             background-image: url("@{img_url}/wp.svg");
         }
     }
-    
-    &__desc{
+    &__desc {
         font-weight: 300;
         text-align: center;
     }
