--- a/less/blocks/main_page_header.less
+++ b/less/blocks/main_page_header.less
@@ -29,7 +29,7 @@
     &__slogan {
         padding: 0px 30px;
         margin-top: 25px;
-        font-size: 24px;
+        font-size: @very_big_size;
         font-weight: 300;
         text-align: center;
         color: @white;
