--- a/less/blocks/review.less
+++ b/less/blocks/review.less
@@ -1,7 +1,7 @@
 .review {
     padding: 15px;
     &__name {
-        font-size: 18px;
+        font-size: @big_size;
         font-weight: 700;
         line-height: 30px;
         text-align: center;
