Приблизительно закончен css мобильной версии.
Слайдер будет дорабатываться и карта тоже.

--- a/less/base.less
+++ b/less/base.less
@@ -13,3 +13,13 @@ a {
 
 text-decoration: none;
 }
+
+.gradient {
+            
+            margin-bottom: -40px;
+            height: 40px;
+            width: 105%;
+            display: block;
+            background: @gray;
+            transform: rotate(-6deg) translate(0px, -20px);
+        }
