--- a/less/blocks/application.less
+++ b/less/blocks/application.less
@@ -26,13 +26,13 @@ border-radius: 30px;
         background-repeat: no-repeat;
         background-position: center;
         &--apple {
-            background-image: url("@{img_url}/apple.svg");
+            background-image: url("@{img_url}/apple-logo.svg");
         }
         &--android {
-            background-image: url("@{img_url}/android.svg");
+            background-image: url("@{img_url}/android-logo.svg");
         }
         &--win {
-            background-image: url("@{img_url}/wp.svg");
+            background-image: url("@{img_url}/microsoft-logo.svg");
         }
     }
     &__desc {
