--- a/less/blocks/feature.less
+++ b/less/blocks/feature.less
@@ -1,5 +1,6 @@
 .features {
     background-color: @gray;
+    overflow: hidden;
 
 &__slogan {
         padding: 50px;
@@ -18,12 +19,6 @@
         }
         &__desc {
             font-weight: 300;
-        }
-        /*здесь будет угловая фиговина*/
-        &::before {
-            content: "";
-            display: block;
-            background: #123;
         }
     }
     &__promo_container {
