--- a/less/blocks/main_page_header.less
+++ b/less/blocks/main_page_header.less
@@ -1,7 +1,7 @@
 .main_page_header {
     width: 320px;
     height: 460px;
-    background: url("@{img_url}/main_page_header_back.png") 0 0 no-repeat;
+    background: url("@{img_url}/background-1@1x.jpg") 0 0 no-repeat;
     &__menu_container {
         padding: 20px;
         background: fadeout(@black, 60%);
@@ -14,7 +14,7 @@
         width: 75px;
         height: 25px;
         display: inline-block;
-        background: url("@{img_url}/logo.png") 0 0 no-repeat;
+        background: url("@{img_url}/pink-logo-1.png") 0 0 no-repeat;
     }
     &__main_menu_button {
         width: 50px;
@@ -33,6 +33,8 @@
         font-weight: 300;
         text-align: center;
         color: @white;
-
+    }
+    &__promo {
+        margin-top: 15px;
     }
 }
