--- a/less/blocks/main_menu.less
+++ b/less/blocks/main_menu.less
@@ -12,7 +12,7 @@
     }
     &__link {
         display: block;
-         padding: 20px;
+         padding: (20px/@mobile_width)*100%;
         border-bottom:1px solid @black;
         border-top:1px solid @menu_shadow;
         
