--- a/less/blocks/main_page_header.less
+++ b/less/blocks/main_page_header.less
@@ -1,11 +1,14 @@
 .main_page_header {
-    width: 320px;
     height: 460px;
     background: url("@{img_url}/iphone-hand-1.png") 0 bottom no-repeat,
                             url("@{img_url}/background-1@1x.jpg") 0 0 no-repeat;
     &__menu_container {
-        padding: 20px;
+        padding: (30px/@mobile_width)*100%;
         background: fadeout(@black, 60%);
+        
+        @media screen and (min-width: 330px) {
+             padding: (20px/@tablet_width)*100%;        
+        }
     }
     &__menu_container--menu_open {
         background: @blue_menu;
@@ -16,6 +19,13 @@
         height: 25px;
         display: inline-block;
         background: url("@{img_url}/pink-logo-1.png") 0 0 no-repeat;
+        
+        @media screen and (min-width: 330px) {
+            width: 175px;
+            height: 40px;
+               background: url("@{img_url}/glasses-simple@1x.png") 0 0 no-repeat,
+                   url("@{img_url}/pink-logo-1.png") 75px bottom no-repeat;            
+        }
     }
     &__main_menu_button {
         width: 50px;
@@ -31,14 +41,14 @@
         display: none;
     }
     &__slogan {
-        padding: 0px 30px;
-        margin-top: 25px;
+        padding: 0px (30px/@mobile_width)*100%;
+        margin-top: (25px/@mobile_width)*100%;
         font-size: @very_big_size;
         font-weight: 300;
         text-align: center;
         color: @white;
     }
     &__promo {
-        margin-top: 15px;
+        margin-top: (15px/@mobile_width)*100%;
     }
 }
