--- a/less/blocks/review.less
+++ b/less/blocks/review.less
@@ -1,16 +1,19 @@
 .review {
-    padding: 15px;
+    
+    padding: (15px/@mobile_width)*100%;
+    
     &__name {
         font-size: @big_size;
         font-weight: 700;
-        line-height: 30px;
+        line-height: (30px/@mobile_width)*100%;
         text-align: center;
     }
+    
     &__text {
         color: @blue;
-
-font-weight: 400;
-        line-height: 30px;
+        font-weight: 400;
+        line-height: (30px/@mobile_width)*100%;
         text-align: center;
     }
+    
 }
