--- a/less/base.less
+++ b/less/base.less
@@ -14,12 +14,14 @@ a {
 text-decoration: none;
 }
 
-.gradient {
-            
-            margin-bottom: -40px;
-            height: 40px;
-            width: 105%;
-            display: block;
-            background: @gray;
-            transform: rotate(-6deg) translate(0px, -20px);
-        }
+.gradient::before {
+content: '';
+width: 105%;
+display: block;
+background: #f2f2f2;
+transform: rotate(-6deg) translate(0px, -20px);
+position: absolute;
+top: 0;
+left: 0;
+height: 40px;
+}
