--- a/less/blocks/feature.less
+++ b/less/blocks/feature.less
@@ -11,6 +11,7 @@
         background: @white;
     }
     .feature {
+        position: relative;
         padding: 25px;
         text-align: center;
         &__title {
