--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,10 @@ html {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
-  max-width: 320px;
-}
-@media screen and (min-width: 330px) {
-  body,
-  html {
-    max-width: 700px;
-  }
+  max-width: 320px
+  /*@media screen and (min-width: 330px) {
+       max-width: @tablet_width;
+    }*/
 }
 a {
   color: #ffffff;
@@ -31,17 +28,18 @@ a {
 /*width*/
 /*Font*/
 .main_page_header {
-  height: 460px;
-  background: url("../../img/iphone-hand-1.png") 0 bottom no-repeat, url("../../img/background-1@1x.jpg") 0 0 no-repeat;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  max-width: 320px;
 }
 .main_page_header__menu_container {
-  padding: 9.375%;
-  background: rgba(0, 0, 0, 0.4);
-}
-@media screen and (min-width: 330px) {
-  .main_page_header__menu_container {
-    padding: 2.85714286%;
-  }
+  padding: 6.25%;
+  background: rgba(0, 0, 0, 0.4)
+  /*  @media screen and (min-width: 330px) {
+             padding: (20px/@tablet_width)*100%;        
+        }*/
 }
 .main_page_header__menu_container--menu_open {
   background: #233343;
@@ -52,13 +50,6 @@ a {
   height: 25px;
   display: inline-block;
   background: url("../../img/pink-logo-1.png") 0 0 no-repeat;
-}
-@media screen and (min-width: 330px) {
-  .main_page_header__logo {
-    width: 175px;
-    height: 40px;
-    background: url("../../img/glasses-simple@1x.png") 0 0 no-repeat, url("../../img/pink-logo-1.png") 75px bottom no-repeat;
-  }
 }
 .main_page_header__main_menu_button {
   width: 50px;
@@ -73,21 +64,9 @@ a {
 .main_page_header__main_menu_button--hidden {
   display: none;
 }
-.main_page_header__slogan {
-  padding: 0px 9.375%;
-  margin-top: 7.8125%;
-  font-size: 24px;
-  font-weight: 300;
-  text-align: center;
-  color: #ffffff;
-}
-.main_page_header__promo {
-  margin-top: 4.6875%;
-}
 .application {
-  background: #151d25;
-  padding: 9.375% 6.25%;
-  color: #ffffff;
+  padding-top: 80px;
+  background: url("../../img/iphone-hand-1.png") 0 200px no-repeat, url("../../img/background-1@1x.jpg") -200px 0 no-repeat;
 }
 .application__button {
   display: block;
@@ -96,6 +75,20 @@ a {
   font-size: 18px;
   border: 3px solid #ffffff;
   border-radius: 30px;
+}
+.application__slogan {
+  padding: 0px 9.375%;
+  margin-top: 7.8125%;
+  font-size: 24px;
+  font-weight: 300;
+  text-align: center;
+  color: #ffffff;
+}
+.application__download_block {
+  margin-top: 310px;
+  background: #151d25;
+  padding: 9.375% 6.25%;
+  color: #ffffff;
 }
 .application__platform_selector {
   display: -webkit-flex;
