--- a/less/blocks/main_page_header.less
+++ b/less/blocks/main_page_header.less
@@ -1,14 +1,17 @@
 .main_page_header {
-    height: 460px;
-    background: url("@{img_url}/iphone-hand-1.png") 0 bottom no-repeat,
-                            url("@{img_url}/background-1@1x.jpg") 0 0 no-repeat;
+    position: absolute;
+    top:0;
+    left:0;
+    right: 0;
+    max-width: @mobile_width;
+    
     &__menu_container {
-        padding: (30px/@mobile_width)*100%;
+        padding: (20px/@mobile_width)*100%;
         background: fadeout(@black, 60%);
         
-        @media screen and (min-width: 330px) {
+      /*  @media screen and (min-width: 330px) {
              padding: (20px/@tablet_width)*100%;        
-        }
+        }*/
     }
     &__menu_container--menu_open {
         background: @blue_menu;
@@ -20,12 +23,12 @@
         display: inline-block;
         background: url("@{img_url}/pink-logo-1.png") 0 0 no-repeat;
         
-        @media screen and (min-width: 330px) {
-            width: 175px;
-            height: 40px;
-               background: url("@{img_url}/glasses-simple@1x.png") 0 0 no-repeat,
-                   url("@{img_url}/pink-logo-1.png") 75px bottom no-repeat;            
-        }
+//        @media screen and (min-width: 330px) {
+//            width: 175px;
+//            height: 40px;
+//               background: url("@{img_url}/glasses-simple@1x.png") 0 0 no-repeat,
+//                   url("@{img_url}/pink-logo-1.png") 75px bottom no-repeat;            
+//        }
     }
     &__main_menu_button {
         width: 50px;
@@ -40,15 +43,5 @@
     &__main_menu_button--hidden {
         display: none;
     }
-    &__slogan {
-        padding: 0px (30px/@mobile_width)*100%;
-        margin-top: (25px/@mobile_width)*100%;
-        font-size: @very_big_size;
-        font-weight: 300;
-        text-align: center;
-        color: @white;
-    }
-    &__promo {
-        margin-top: (15px/@mobile_width)*100%;
-    }
+  
 }
