--- a/less/base.less
+++ b/less/base.less
@@ -7,10 +7,10 @@ html {
     font-size: @base_size;
     max-width: @mobile_width;
     
-    /*@media screen and (min-width: 330px) {
+    @media screen and (min-width: 330px) {
        max-width: @tablet_width;
-    }*/
-
+    }
+    
 }
 a {
     color: @white;
