--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,13 @@ html {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
-  max-width: 320px
-  /*@media screen and (min-width: 330px) {
-       max-width: @tablet_width;
-    }*/
+  max-width: 320px;
+}
+@media screen and (min-width: 330px) {
+  body,
+  html {
+    max-width: 700px;
+  }
 }
 a {
   color: #ffffff;
@@ -34,12 +37,19 @@ a {
   right: 0;
   max-width: 320px;
 }
+@media screen and (min-width: 330px) {
+  .main_page_header {
+    max-width: 700px;
+  }
+}
 .main_page_header__menu_container {
   padding: 6.25%;
-  background: rgba(0, 0, 0, 0.4)
-  /*  @media screen and (min-width: 330px) {
-             padding: (20px/@tablet_width)*100%;        
-        }*/
+  background: rgba(0, 0, 0, 0.4);
+}
+@media screen and (min-width: 330px) {
+  .main_page_header__menu_container {
+    padding: 2.85714286%;
+  }
 }
 .main_page_header__menu_container--menu_open {
   background: #233343;
@@ -50,6 +60,13 @@ a {
   height: 25px;
   display: inline-block;
   background: url("../../img/pink-logo-1.png") 0 0 no-repeat;
+}
+@media screen and (min-width: 330px) {
+  .main_page_header__logo {
+    width: 175px;
+    height: 40px;
+    background: url("../../img/glasses-simple@1x.png") 0 0 no-repeat, url("../../img/pink-logo-1.png") 75px bottom no-repeat;
+  }
 }
 .main_page_header__main_menu_button {
   width: 50px;
