--- a/less/blocks/feature.less
+++ b/less/blocks/feature.less
@@ -12,6 +12,7 @@
     }
     
     .feature {
+        position: relative;
         padding: (25px/@mobile_width)*100%;
         text-align: center;
         &__title {
