--- a/css/main.css
+++ b/css/main.css
@@ -17,15 +17,18 @@ a {
   color: #ffffff;
   text-decoration: none;
 }
-.gradient {
-  margin-bottom: -40px;
-  height: 40px;
+.gradient::before {
+  content: '';
   width: 105%;
   display: block;
   background: #f2f2f2;
   -webkit-transform: rotate(-6deg) translate(0px, -20px);
       -ms-transform: rotate(-6deg) translate(0px, -20px);
           transform: rotate(-6deg) translate(0px, -20px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 40px;
 }
 /*colors*/
 /*width*/
@@ -151,6 +154,7 @@ a {
   background: #ffffff;
 }
 .features .feature {
+  position: relative;
   padding: 7.8125%;
   text-align: center;
 }
