--- a/less/blocks/application.less
+++ b/less/blocks/application.less
@@ -1,7 +1,12 @@
 .application {
-    padding-top: 80px;
+    padding-top: (80px/@mobile_width)*100%;
     background: url("@{img_url}/iphone-hand-1.png") 0 200px no-repeat,
                             url("@{img_url}/background-1@1x.jpg") -200px 0 no-repeat;
+    
+     @media screen and (min-width: 330px) {     
+               background:url("@{img_url}/iphone-hand-2@1x.png") 0 180px no-repeat,
+                                      url("@{img_url}/background-2@1x.jpg") -250px 0 no-repeat;
+        }
 
     &__button {
         display: block;
@@ -10,6 +15,10 @@
         font-size: @big_size;
         border: 3px solid@white;
         border-radius: 30px;
+        
+        @media screen and (min-width: 330px) {
+            padding: (25px/@tablet_width)*100%;
+        }
     }    
     &__slogan {
         padding: 0px (30px/@mobile_width)*100%;
@@ -18,6 +27,13 @@
         font-weight: 300;
         text-align: center;
         color: @white;
+        
+         @media screen and (min-width: 330px) {     
+             font-size: @gigant;
+             width:(230px/@tablet_width)*100%;
+             margin-top: (0px/@tablet_width)*100%;
+        }
+        
     }
     
     &__download_block{
@@ -25,6 +41,13 @@
             background: darken(@blue, 10%);
             padding: (30px/@mobile_width)*100% (20px/@mobile_width)*100%;
             color: @white;
+        
+        @media screen and (min-width: 330px) {     
+             font-size: @big_size;
+             width:(300px/@tablet_width)*100%;
+             margin-top: (0px/@tablet_width)*100%;
+            background: none;
+        }
     }
     
     &__platform_selector {
