--- a/less/blocks/review.less
+++ b/less/blocks/review.less
@@ -12,7 +12,7 @@
     &__text {
         color: @blue;
         font-weight: 400;
-        line-height: (30px/@mobile_width)*100%;
+        line-height: 30px;
         text-align: center;
     }
     
