--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ html {
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   max-width: 320px;
+  font-weight: 300;
 }
 @media screen and (min-width: 700px) {
   body,
@@ -38,6 +39,11 @@ a {
         -ms-transform: rotate(-5deg) translate(-15px, 160px);
             transform: rotate(-5deg) translate(-15px, 160px);
   }
+}
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 /*colors*/
 /*width*/
@@ -243,18 +249,56 @@ a {
 }
 .review {
   padding: 4.6875%;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  line-height: 30px;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+@media screen and (min-width: 700px) {
+  .review {
+    -webkit-flex-direction: column-reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
 }
 .review__name {
   font-size: 18px;
   font-weight: 700;
-  line-height: 9.375%;
-  text-align: center;
+}
+@media screen and (min-width: 700px) {
+  .review__name {
+    font-size: 20px;
+    margin-bottom: 0;
+  }
 }
 .review__text {
   color: #283645;
   font-weight: 400;
-  line-height: 30px;
-  text-align: center;
+}
+@media screen and (min-width: 700px) {
+  .review__text {
+    font-size: 18px;
+  }
+}
+.review__profession {
+  display: none;
+}
+@media screen and (min-width: 700px) {
+  .review__profession {
+    display: block;
+    margin: 0;
+    color: #283645;
+    -webkit-order: -1;
+        -ms-flex-order: -1;
+            order: -1;
+  }
 }
 .slider_frame__switch {
   display: -webkit-flex;
@@ -283,13 +327,59 @@ a {
   border: 3px solid #000000;
   background: #ffffff;
 }
+@media screen and (min-width: 700px) {
+  .slider_frame__switch--price {
+    display: none;
+  }
+}
 .contacts {
-  padding: 6.25%;
+  position: relative;
 }
 .contacts__slogan {
   color: #283645;
   font-size: 24px;
   text-align: center;
+}
+@media screen and (min-width: 700px) {
+  .contacts__slogan {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 700px) {
+  .contacts::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -60px;
+    width: 0px;
+    height: 0px;
+    border: 350px solid transparent;
+    border-top: 100px solid #ffffff;
+    z-index: 1;
+  }
+}
+.contact {
+  padding: 0 6.25%;
+}
+@media screen and (min-width: 700px) {
+  .contact {
+    font-weight: 300;
+  }
+  .contact:nth-child(2) {
+    position: absolute;
+    left: 50px;
+  }
+  .contact:nth-child(3) {
+    position: absolute;
+    right: 50px;
+  }
+  .contact:nth-child(4) {
+    margin: 0 auto;
+    margin-top: 150px;
+    margin-bottom: 20px;
+    width: 270px;
+  }
 }
 .contact__title {
   color: #283645;
@@ -334,9 +424,52 @@ a {
 }
 .ads {
   display: none;
+  padding: 30px;
 }
 @media screen and (min-width: 700px) {
   .ads {
-    display: block;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
   }
+}
+.ads__time_img {
+  margin-right: 10px;
+}
+.ads__article {
+  width: 300px;
+  padding: 50px 20px;
+  text-align: left;
+}
+.ads__title {
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  width: 200px;
+}
+.ads__text {
+  color: #283645;
+  font-weight: 400;
+  line-height: 24px;
+  width: 300px;
+}
+.ads__link {
+  display: block;
+  margin-top: 10px;
+  color: #d22856;
+  text-decoration: underline;
+}
+.main_page_footer {
+  position: relative;
+  z-index: 10;
+  padding: 20px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+.main_page_footer__logo {
+  color: black
+  /*display: inline-block;
+        height: 40px;
+        width: 145px;*/
 }
