--- a/less/base.less
+++ b/less/base.less
@@ -6,12 +6,15 @@ html {
     font-family: 'Open Sans', sans-serif;
     font-size: @base_size;
     max-width: @mobile_width;
+    font-weight: 300;
+    
     
     @media screen and (min-width: @tablet_width) {
        max-width: @tablet_width;
     }
     
 }
+
 a {
     color: @white;
     text-decoration: none;
@@ -21,7 +24,7 @@ a {
     content: '';
     width: 105%;
     display: block;
-    background: #f2f2f2;
+    background: @gray;
     transform: rotate(-6deg) translate(-15px, 130px);
     position: absolute;
     top: 0;
@@ -35,4 +38,11 @@ a {
     }
     
 }
+
+.clearfix::after {
+            content: "";
+            display: table;
+            clear: both;
+}
+
 
