--- a/less/blocks/ads.less
+++ b/less/blocks/ads.less
@@ -1,9 +1,42 @@
 .ads{
     display: none;
     
-     @media screen and (min-width: @tablet_width) {
-                display: block;                
+    padding: 30px;
+    
+    @media screen and (min-width: @tablet_width) {
+                display: flex;                
     }
     
+    &__time_img {
+       // float: left;
+        margin-right: 10px;
+    }
+    
+    &__article {
+        width: 300px;
+        padding: 50px 20px;    
+        text-align: left;
+    }
+    
+    &__title {
+        font-size: @mini-gigant;
+        font-weight: 700;
+        line-height: 36px;
+        width: 200px;    
+    }
+    
+    &__text {
+        color: @blue;
+        font-weight: 400;
+        line-height: 24px;
+        width: 300px;
+    }
+    
+    &__link {
+        display: block;
+        margin-top: 10px;
+        color: @pink;
+        text-decoration: underline;
+    }
     
 }
