--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -1,15 +1,56 @@
 .contacts {
-    padding: (20px/@mobile_width)*100%;
+    position: relative;
     
     &__slogan{
         color: @blue;
         font-size: @very_big_size;
-text-align: center;
+        text-align: center;
+        
+        @media screen and (min-width: @tablet_width) {
+            font-size: @gigant;    
+            margin-bottom: 20px;
+        }
     }
     
+    &__map {
+       
+    }
+    @media screen and (min-width: @tablet_width) {        
+        &::after {
+            content: "";
+            position: absolute;
+            left: 0;  
+            bottom: -60px;
+            width: 0px;
+            height: 0px;
+            border: 350px solid transparent;	border-top: 100px solid @white;
+            z-index: 1;
+        }
+    }
+        
 }
 
 .contact {
+    @media screen and (min-width: @tablet_width) {    
+        &:nth-child(2){
+            position: absolute;
+            left: 50px;
+        }
+        &:nth-child(3){
+            position: absolute;
+            right: 50px;
+        }
+        &:nth-child(4){    
+        margin: 0 auto;
+        margin-top: 150px;
+        margin-bottom: 20px;
+        width: 270px;
+        }
+        
+        font-weight: 300;
+    }
+    padding:0 (20px/@mobile_width)*100%;
+        
     &__title {
         color: @blue;
         font-size: @big_size;
@@ -23,4 +64,4 @@ text-align: center;
         font-size: @very_big_size;
         text-align: center;
     }
- }
+}
