--- a/less/blocks/review.less
+++ b/less/blocks/review.less
@@ -2,18 +2,46 @@
     
     padding: (15px/@mobile_width)*100%;
     
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    line-height: 30px;
+    justify-content: flex-start;
+    
+    @media screen and (min-width: @tablet_width) {
+                flex-direction: column-reverse;              
+    }
+    
     &__name {
         font-size: @big_size;
-        font-weight: 700;
-        line-height: (30px/@mobile_width)*100%;
-        text-align: center;
+        font-weight: 700;        
+        
+        @media screen and (min-width: @tablet_width) {
+               font-size: @big_size+2;    
+            margin-bottom: 0;
+        }
+        
     }
     
     &__text {
         color: @blue;
         font-weight: 400;
-        line-height: 30px;
-        text-align: center;
+        
+         @media screen and (min-width: @tablet_width) {
+               font-size: @big_size;          
+        }
+    }
+    
+    &__profession {        
+        display: none;
+        
+        @media screen and (min-width: @tablet_width) {
+            display: block;
+            margin: 0;
+            color: @blue;
+            order: -1;   
+        }
+    
     }
     
 }
