--- a/less/base.less
+++ b/less/base.less
@@ -13,6 +13,10 @@ html {
        max-width: @tablet_width;
     }
     
+    @media screen and (min-width: @pc_width) {
+       max-width: @pc_width;
+    }
+    
 }
 
 a {
