--- a/less/blocks/application.less
+++ b/less/blocks/application.less
@@ -3,10 +3,16 @@
     background: url("@{img_url}/iphone-hand-1.png") 0 200px no-repeat,
                             url("@{img_url}/background-1@1x.jpg") -200px 0 no-repeat;
     
-     @media screen and (min-width: @tablet_width) {     
-               background:url("@{img_url}/iphone-hand-2@1x.png") 0 180px no-repeat,
+    @media screen and (min-width: @tablet_width) {     
+               background:url("@{img_url}/iphone-hand-2@1x.png") 0 100% no-repeat,
                                       url("@{img_url}/background-2@1x.jpg") -250px 0 no-repeat;
-        }
+    }
+    
+    @media screen and (min-width: @pc_width) {     
+        padding-top: (280px/@pc_width)*100%;
+        background: url("@{img_url}/iphone-hand-3@1x.png") 100% 100% no-repeat,
+                                      url("@{img_url}/background-3@1x.jpg") 0 100% no-repeat;
+    }
 
     &__button {
         display: block;
@@ -19,6 +25,13 @@
         @media screen and (min-width: @tablet_width) {
             padding: (25px/@tablet_width)*100%;
         }
+        
+        @media screen and (min-width: @pc_width) {
+            padding: (40px/@pc_width)*100%;
+            //margin-bottom: (140px/@pc_width)*100%;
+            font-size: @big_size + 3;
+            font-weight: 700;
+        }
     }    
     &__slogan {
         padding: 0px (30px/@mobile_width)*100%;
@@ -28,10 +41,15 @@
         text-align: center;
         color: @white;
         
-         @media screen and (min-width: @tablet_width) {     
+        @media screen and (min-width: @tablet_width) {     
              font-size: @gigant;
              width:(230px/@tablet_width)*100%;
              margin-top: (0px/@tablet_width)*100%;
+        }
+        @media screen and (min-width: @pc_width) {     
+            font-size: @gigant;
+            width:(230px/@pc_width)*100%;
+            padding: (30px/@pc_width)*100% (140px/@pc_width)*100%;
         }
         
     }
@@ -43,10 +61,16 @@
             color: @white;
         
         @media screen and (min-width: @tablet_width) {     
-             font-size: @big_size;
-             width:(300px/@tablet_width)*100%;
-             margin-top: (0px/@tablet_width)*100%;
+            font-size: @big_size;
+            width:(300px/@tablet_width)*100%;
+            margin-top: (0px/@tablet_width)*100%;
             background: none;
+        }
+        @media screen and (min-width: @pc_width) {
+            width:(300px/@pc_width)*100%;
+            padding: (30px/@pc_width)*100% (100px/@pc_width)*100%;
+            margin-bottom: (200px/@pc_width)*100%;          
+            
         }
     }
     
