--- a/less/blocks/main_menu.less
+++ b/less/blocks/main_menu.less
@@ -6,22 +6,45 @@
     display: flex;
     flex-direction: column;
     width: @mobile_width;
+    
+    @media screen and (min-width: @tablet_width) {
+        width: @tablet_width;
+    }
+    
+    @media screen and (min-width: @pc_width) {
+        width: @pc_width;
+        flex-direction: row;
+        justify-content: flex-end;
+        margin-top: -60px;    
+    }
     &__item {
         text-align: center;
         background:@blue_menu;
+        @media screen and (min-width: @pc_width) {
+            background: none;   
+        }
     }
     &__link {
         display: block;
-         padding: (20px/@mobile_width)*100%;
+        padding: (20px/@mobile_width)*100%;
         border-bottom:1px solid @black;
         border-top:1px solid @menu_shadow;
         
         font-size: @big_size;
         font-weight: 700;
         text-transform: uppercase;
+        
+        @media screen and (min-width: @pc_width) {
+            padding: 0 50px;
+            font-weight: 400;
+            text-transform: none;
+            border: none;
+        }
     }
     
     &--hidden {
-        display: none;
+        @media screen and (max-width: @pc_width) {
+               display: none;
+        }
     }
 }
