--- a/less/base.less
+++ b/less/base.less
@@ -5,18 +5,7 @@ html {
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
     font-size: @base_size;
-    max-width: @mobile_width;
     font-weight: 300;
-    
-    
-    @media screen and (min-width: @tablet_width) {
-       max-width: @tablet_width;
-    }
-    
-    @media screen and (min-width: @pc_width) {
-       max-width: @pc_width;
-    }
-    
 }
 
 a {
@@ -24,29 +13,42 @@ a {
     text-decoration: none;
 }
 
-.gradient::after {
-    content: '';
-    width: 105%;
-    display: block;
-    background: @gray;
-    transform: rotate(-6deg) translate(-15px, 130px);
-    position: absolute;
-    top: 0;
-    left: 0;
-    height:40px;
-    z-index: 1;
-    
-    @media screen and (min-width: @tablet_width) {
-        height:80px;
-       transform: rotate(-5deg)  translate(-15px, 160px);
-    }
-    
-}
+//.gradient::after {
+//    content: '';
+//    width: 105%;
+//    display: block;
+//    background: @gray;
+//    transform: rotate(-6deg) translate(-15px, 130px);
+//    position: absolute;
+//    top: 0;
+//    left: 0;
+//    height:40px;
+//    z-index: 1;
+//    
+//    @media screen and (min-width: @tablet_width) {
+//       height:80px;
+//       transform: rotate(-5deg)  translate(-15px, 160px);
+//    }
+//    
+//}
 
 .clearfix::after {
             content: "";
             display: table;
             clear: both;
+}
+
+.layout_center_wrapper {
+    margin: 0 auto;
+    width: @mobile_width;    
+    
+    @media screen and (min-width: @tablet_width) {
+        width: @tablet_width;
+    }
+    
+    @media screen and (min-width: @pc_width) {
+        width: @pc_width;
+    }
 }
 
 
