--- a/less/blocks/feature.less
+++ b/less/blocks/feature.less
@@ -1,5 +1,4 @@
 .features {
-    background-color: @gray;
     overflow: hidden;
 
 &__slogan {
@@ -47,6 +46,9 @@
             justify-content: space-between;
             align-content: space-between;
          }
+    }
+    &__demo {        
+        background-color: @gray;
     }
     
     .feature {
